Fixed alignment of icons on anime list

--- a/pages/user/user.styl
+++ b/pages/user/user.styl
@@ -1,3 +1,6 @@
+.anime-status-icon
+	margin 0 !important
+
 .image-container
 	float left
 	width auto
